# longchain

./: .gitignore  README.md  example.py  pyproject.toml
examples/sockthief/: README.md  app_manifest.json  main.py  requirements.txt
src/longchain/core/: actionresolver.py  agentaction.py  dataclasses.py  datastore.py  messager.py  path.py  quest.py
src/longchain/impl/actionresolver/: llm.py  sequential.py
src/longchain/impl/agentaction/: arbitrary.py  end.py  message.py
src/longchain/impl/datastore/: jsonfile.py
src/longchain/impl/messager/: slack.py
src/longchain/plugins/bag/: __init__.py  bag.py  stake.py
src/longchain/plugins/bag/api/: bag_pb2.py  bag_pb2.pyi  bag_pb2_grpc.py
