[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name="longchain"
version = "0.1.0"
description="A framework for LLM-powered interactions"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [

]